--- a/Shoestore/Resources/Main.storyboard
+++ b/Shoestore/Resources/Main.storyboard
@@ -18,24 +18,63 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="PUD-VJ-w5S">
+                            <searchBar contentMode="redraw" showsCancelButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PUD-VJ-w5S">
                                 <rect key="frame" x="0.0" y="40" width="375" height="56"/>
+                                <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="LdV-nu-vl8" id="qEG-8a-sdT"/>
+                                </connections>
                             </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Yrs-dM-a2T">
+                                <rect key="frame" x="0.0" y="96" width="375" height="522"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" textLabel="Ugm-Kr-kHV" style="IBUITableViewCellStyleDefault" id="9qx-UW-rle">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9qx-UW-rle" id="JNq-nZ-f6Y">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Ugm-Kr-kHV">
+                                                    <rect key="frame" x="15" y="0.0" width="345" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="LdV-nu-vl8" id="hte-go-62j"/>
+                                    <outlet property="delegate" destination="LdV-nu-vl8" id="4u1-S4-Ei1"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="Yrs-dM-a2T" firstAttribute="bottom" secondItem="alO-2F-Jv7" secondAttribute="bottom" id="9Js-iS-o2s"/>
                             <constraint firstItem="PUD-VJ-w5S" firstAttribute="trailing" secondItem="alO-2F-Jv7" secondAttribute="trailing" id="JeX-q9-VH7"/>
+                            <constraint firstItem="Yrs-dM-a2T" firstAttribute="trailing" secondItem="alO-2F-Jv7" secondAttribute="trailing" id="LRs-Rk-LxW"/>
+                            <constraint firstItem="Yrs-dM-a2T" firstAttribute="top" secondItem="PUD-VJ-w5S" secondAttribute="bottom" id="Wcx-dL-G11"/>
                             <constraint firstItem="PUD-VJ-w5S" firstAttribute="top" secondItem="alO-2F-Jv7" secondAttribute="top" constant="20" id="Zg2-gQ-2Fe"/>
                             <constraint firstItem="PUD-VJ-w5S" firstAttribute="leading" secondItem="alO-2F-Jv7" secondAttribute="leading" id="czU-7w-bOx"/>
+                            <constraint firstItem="Yrs-dM-a2T" firstAttribute="leading" secondItem="alO-2F-Jv7" secondAttribute="leading" id="eMT-g3-EcV"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="alO-2F-Jv7"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="musica-searcher" id="oZf-M6-b4e"/>
+                    <connections>
+                        <outlet property="searchBar" destination="PUD-VJ-w5S" id="54c-Ma-cDp"/>
+                        <outlet property="tableView" destination="Yrs-dM-a2T" id="NbC-mb-ieQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hMm-sH-JT6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-895" y="-737"/>
+            <point key="canvasLocation" x="-895.20000000000005" y="-737.18140929535241"/>
         </scene>
         <!--Search result - View Controller-->
         <scene sceneID="9LQ-lt-kCX">
