--- a/Shoestore/Resources/Main.storyboard
+++ b/Shoestore/Resources/Main.storyboard
@@ -81,7 +81,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hMm-sH-JT6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-895.20000000000005" y="-737.18140929535241"/>
+            <point key="canvasLocation" x="-895" y="-725"/>
         </scene>
         <!--Search result - View Controller-->
         <scene sceneID="9LQ-lt-kCX">
@@ -402,28 +402,6 @@
             </objects>
             <point key="canvasLocation" x="-218" y="37"/>
         </scene>
-        <!--Home View Controller-->
-        <scene sceneID="lKV-4r-ixc">
-            <objects>
-                <viewController id="js6-b5-ve6" customClass="HomeViewController" customModule="Shoestore" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="eLq-AH-K46">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="a4Z-nx-oY9">
-                                <rect key="frame" x="67" y="20" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="ivJ-8c-HFF"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="" image="home (1)" id="6VD-2n-BMY"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="y8i-Q6-uWG" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1698" y="-737"/>
-        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="exR-GD-NBn">
             <objects>
@@ -434,15 +412,78 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="js6-b5-ve6" kind="relationship" relationship="viewControllers" id="n11-di-yIv"/>
-                        <segue destination="LdV-nu-vl8" kind="relationship" relationship="viewControllers" id="sKN-jE-3r9"/>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="j5o-1S-uqR"/>
-                        <segue destination="re6-Gc-JoJ" kind="relationship" relationship="viewControllers" id="c4G-Qg-uDf"/>
+                        <segue destination="PH8-g2-wyZ" kind="relationship" relationship="viewControllers" id="YrC-Sx-N7g"/>
+                        <segue destination="LdV-nu-vl8" kind="relationship" relationship="viewControllers" id="1b9-eA-IzC"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="EyC-Iw-slv"/>
+                        <segue destination="re6-Gc-JoJ" kind="relationship" relationship="viewControllers" id="ASm-Q7-x9B"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OU6-1c-SPN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2502" y="-725"/>
+        </scene>
+        <!--Home Table View Controller-->
+        <scene sceneID="rLR-WD-ouc">
+            <objects>
+                <tableViewController id="PH8-g2-wyZ" customClass="HomeTableViewController" customModule="Shoestore" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Kzb-O2-Oqh">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="361" id="5AN-qW-Fcv" customClass="HomeCellTableViewCell" customModule="Shoestore" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="361"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5AN-qW-Fcv" id="RSu-se-OCv">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="360.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gRT-sp-Ric">
+                                            <rect key="frame" x="16" y="22" width="343" height="223"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cGi-lq-8xK">
+                                            <rect key="frame" x="16" y="282" width="42" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T7Z-QS-l0B">
+                                            <rect key="frame" x="317" y="281" width="42" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yyF-eN-lJ0">
+                                            <rect key="frame" x="16" y="253" width="42" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="imagen_zapato" destination="gRT-sp-Ric" id="gqB-cQ-d9Y"/>
+                                    <outlet property="marca" destination="yyF-eN-lJ0" id="ToC-is-0ed"/>
+                                    <outlet property="modelo" destination="cGi-lq-8xK" id="Y19-yp-o6b"/>
+                                    <outlet property="precio" destination="T7Z-QS-l0B" id="cMe-YF-Ool"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="PH8-g2-wyZ" id="dhB-qd-cvB"/>
+                            <outlet property="delegate" destination="PH8-g2-wyZ" id="1Eq-mK-pmx"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="" image="home (1)" id="B8f-IK-Kjj"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fJ1-by-V09" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1698.4000000000001" y="-725.48725637181417"/>
         </scene>
         <!--Shop View Controller-->
         <scene sceneID="tne-QT-ifu">
